--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@slack/bolt": "^4.4.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "osu-web.js": "^2.6.0"
   },
   "type": "module"
 }
