--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dependencies": {
     "@slack/bolt": "^4.4.0",
     "dotenv": "^16.1.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "node-cron": "^4.2.1"
     },
     "devDependencies": {
     "nodemon": "^3.0.2"
